-- Copyright (C) 2014, Ugo Pozo
--               2014, Câmara Municipal de São Paulo

-- ParseUrl.cabal - arquivo de especificações de compilação do parser de URL.

-- Este arquivo é parte do software Anubis.

-- Anubis é um software livre: você pode redistribuí-lo e/ou modificá-lo
-- sob os termos da Licença Pública Geral GNU (GNU General Public License),
-- tal como é publicada pela Free Software Foundation, na versão 3 da
-- licença, ou (sua decisão) qualquer versão posterior.

-- Anubis é distribuído na esperança de que seja útil, mas SEM NENHUMA
-- GARANTIA; nem mesmo a garantia implícita de VALOR COMERCIAL ou ADEQUAÇÃO
-- PARA UM PROPÓSITO EM PARTICULAR. Veja a Licença Pública Geral GNU para
-- mais detalhes.

-- Você deve ter recebido uma cópia da Licença Pública Geral GNU junto com
-- este programa. Se não, consulte <http://www.gnu.org/licenses/>.

name: parseurl
version: 0.1.0.0
license: GPL-3
license-file: LICENSE
author: Ugo Pozo, Câmara Municipal de São Paulo
maintainer: ugopozo@camara.sp.gov.br
category: Web
build-type: Simple
cabal-version: >= 1.18

executable libParseUrl.so
    default-language: Haskell2010
    main-is: ParseUrl.hs
    other-extensions: DeriveGeneric, OverloadedStrings
    ghc-options: -no-hs-main -fPIC -shared -dynamic
    ld-options: -shared /usr/lib/ghc-7.8.3/rts-1.0/libHSrts-ghc7.8.3.so
    -- ld-options: -shared /opt/homebrew-cask/Caskroom/ghc/7.8.3-r1/ghc-7.8.3.app/Contents/lib/ghc-7.8.3/rts-1.0/libHSrts-ghc7.8.3.dylib
    build-depends:
        base >= 4.7
        , bytestring >= 0.10
        , transformers >= 0.4
        , text >= 1.1
        , aeson >= 0.8
        , parsec >= 3.1.5
        , mtl >= 2.2.1
