name: parseurl
version: 0.1.0.0
license: GPL-3
license-file: LICENSE
author: Ugo Pozo, C창mara Municipal de S찾o Paulo
maintainer: ugopozo@camara.sp.gov.br
category: Web
build-type: Simple
copyright: 2016 C창mara Municipal de S찾o Paulo
build-type: Simple
cabal-version: >= 1.18

executable libParseUrl.so
    hs-source-dirs: src
    default-language: Haskell2010
    main-is: ParseUrl.hs
    other-extensions: DeriveGeneric, OverloadedStrings
    ghc-options: -no-hs-main -fPIC -shared -dynamic -threaded
    ld-options: -shared
    extra-libraries: HSrts-ghc8.0.2
    build-depends:
        base >= 4.7
        , bytestring >= 0.10
        , transformers >= 0.4
        , text >= 1.1
        , aeson >= 0.8
        , parsec >= 3.1.5
        , mtl >= 2.2.1

