name: parseurl
version: 0.1
build-type: Simple
cabal-version: >= 1.18

executable libparseurl.so
    default-language: Haskell2010
    main-is: parseurl.hs
    ghc-options: -no-hs-main -fPIC -shared -dynamic
    ld-options: -shared /usr/lib/ghc-7.8.3/rts-1.0/libHSrts-ghc7.8.3.so
    build-depends:
        base >= 4.7
        , bytestring >= 0.10
        , text >= 1.1
        , aeson >= 0.8
        , parsec >= 3.1.5
        , transformers >= 0.4
        , mtl >= 2.2.1
